# tools

./: .gitignore  README.md
aut_lib/: common_function.hpp  intop.h  singleton.hpp
aut_lib/test/: a.out  cf_test.cpp
autlib/aclredis/samples/: Makefile.in
autlib/aclredis/samples/redis/: Makefile
autlib/aclredis/samples/redis_client_cluster/: Makefile
autlib/aclredis/samples/redis_client_cluster2/: Makefile
autlib/aclredis/samples/redis_cluster/: Makefile
autlib/aclredis/samples/redis_connection/: Makefile
autlib/aclredis/samples/redis_geo/: Makefile
autlib/aclredis/samples/redis_hash/: Makefile
autlib/aclredis/samples/redis_hyperloglog/: Makefile
autlib/aclredis/samples/redis_key/: Makefile
autlib/aclredis/samples/redis_list/: Makefile
autlib/aclredis/samples/redis_manager/: Makefile
autlib/aclredis/samples/redis_pool/: Makefile
autlib/aclredis/samples/redis_pubsub/: Makefile
autlib/aclredis/samples/redis_sentinel/: Makefile
autlib/aclredis/samples/redis_set/: Makefile
autlib/aclredis/samples/redis_string/: Makefile
autlib/aclredis/samples/redis_trans/: Makefile
autlib/aclredis/samples/redis_zset/: Makefile
autlib/aclredis/samples/redis_zset_pool/: Makefile
autlib/aclredis/test/: Makefile
autlib/c/: list.h
autlib/c++/: singleton.hpp
autlib/c++/common/: LRU.h
autlib/c++/hash/HMAC-SHA256/: digest-base.cpp
autlib/c++/hash/Hmac-sha256/: digest.hpp
autlib/c++/hash/digest-hmac-sha256-cxx11/: Makefile  digest-test.cpp  test
autlib/c++/json/: JsonUtil.h
autlib/c++/random/: RandomGenerator.h
autlib/c++/signal/: sigslot.hpp
autlib/c++/tcp/: common_tcpconnection.cpp  common_tcpconnection.h  tcpconnection.h
autlib/c++/util/: TimerTask.h  Util.h  a.out  test.cpp
autlib/other/: a.out  prime.h  prime_test.cc
autlib/redis/aclredis/: README.md
autlib/redis/aclredis/sample/redis/redis_client_cluster/: redis_client_cluster.cpp
autlib/redis/aclredis/test/: main.cpp
autlib/test/: a.out  btest.c  c_test.c  combination_test.cc  cpp_test.cpp  jtest.cpp  list_test.c  singleton_test.cc  str_test.cc  timer_test.cpp  trandom.cpp
autlib/test/dp_test/: a.out  bridge_test.cc  cmd_test.cc  cor_test.cc  decorator_test.cc  facade_test.cc  flyweight_test.cc  interpret_test.cc  iterator_test.cc  mediator_test.cc  memento_test.cc  observe_test.cc  proxy_test.cc  state_test.cc  strategy_test.cc  template_test.cc  visitor_test.cc
cmake/backup/cmake/t1/: CMakeLists.txt
cmake/backup/cmake/t2/: runhello.sh
cmake/backup/cmake/t2/doc/: hello.txt
cmake/backup2/cmake/t2/src/: CMakeLists.txt
cmake/backup3/cmake/t1/: CMakeCache.txt  CMakeLists.txt
cmake/backup3/cmake/t2/: runhello.sh
cmake/backup3/cmake/t3/: CMakeLists.txt
cmake/backup3/cmake/t4/src/: CMakeLists.txt
cmake/step2/: CMakeLists.txt
cmake/step2/src/: Test1.h
cmake/step3/cache/define/: test.pb.h
dev_tools/CMake/backup/cmake/t2/src/: CMakeLists.txt  main.c
dev_tools/CMake/backup/cmake/t3/lib/: CMakeLists.txt
dev_tools/CMake/backup2/cmake/t1/: CMakeLists.txt
dev_tools/CMake/backup2/cmake/t2/: CMakeLists.txt
dev_tools/CMake/backup3/cmake/t1/: Makefile  cmake_install.cmake
dev_tools/CMake/backup3/cmake/t2/src/: main.c
dev_tools/CMake/backup3/cmake/t3/lib/: hello.h  libhello.so.1.2
dev_tools/CMake/backup3/cmake/t4/src/: main.c
dev_tools/CMake/backup4/cmake/t2/: CMakeLists.txt  runhello.sh
dev_tools/CMake/backup4/cmake/t2/src/: CMakeLists.txt
dev_tools/CMake/backup4/cmake/t3/lib/: CMakeLists.txt  hello.h
dev_tools/CMake/backup4/cmake/t4/: CMakeLists.txt
dev_tools/CMake/backup4/cmake/t4/src/: CMakeLists.txt  main.c
dev_tools/CMake/backup4/cmake/t6/: tags
dev_tools/CMake/backup4/cmake/t6/cmake/: FindHELLO.cmake
dev_tools/CMake/backup4/cmake/t6/src/: CMakeLists.txt
dev_tools/CMake/backup4/cmake/t6/src/ssrc/: 11.c  12.c
dev_tools/CMake/step1/: CMakeLists.txt  main.cc
dev_tools/CMake/step2/: main.cc
dev_tools/CMake/step2/src/: CMakeLists.txt  Test1.cc
dev_tools/CMake/step3/cache/define/: test.proto
dev_tools/CMake/step3/src/: main.cc
dev_tools/CMake/step3/src/cmake/: Findlibprotobuf.cmake
dev_tools/CMake/template/: CMakeLists.txt
dev_tools/CMake/template/cmake/: Findglib.cmake
dev_tools/JSON/: README.md
dev_tools/JSON/cJSON/: README.md
dev_tools/JSON/cJSON/src/: a.out  add_test.c  cJSON.c  tags  test.c
dev_tools/Protol Buffers/: README.md
dev_tools/XML/: README.md
dev_tools/XML/mytest/: README.md  a.out  main.c  new_phone_test.xml  parse_main.c  phone_test.xml  phone_test_not_enc.xml  testio.cc
dev_tools/XML/tinyxml/: tags
dev_tools/cmake/: README.md
dev_tools/cmake/backup/cmake/t2/: CMakeLists.txt
dev_tools/cmake/backup/cmake/t3/: CMakeLists.txt
dev_tools/cmake/backup/cmake/t3/lib/: hello.c  hello.h
dev_tools/cmake/backup/cmake/t4/: CMakeLists.txt
dev_tools/cmake/backup/cmake/t4/src/: CMakeLists.txt  main.c
dev_tools/cmake/backup2/cmake/t1/: main.c
dev_tools/cmake/backup3/cmake/t1/: hello
dev_tools/cmake/backup3/cmake/t2/: CMakeLists.txt
dev_tools/cmake/backup3/cmake/t2/src/: CMakeLists.txt
dev_tools/cmake/backup3/cmake/t4/: CMakeLists.txt
dev_tools/cmake/backup4/cmake/t1/: main.c
dev_tools/cmake/backup4/cmake/t6/: CMakeLists.txt
dev_tools/cmake/step3/cache/define/: test.pb.cc
dev_tools/cmake/step3/src/: CMakeLists.txt
dev_tools/cmake/template/src/: CMakeLists.txt
test_code/: a.out  asm.c  chrono.cpp  oftest.c  tags
(+6 files in other folders)
