
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(HELLO)
ADD_SUBDIRECTORY(src bin)

# install COPYRIGHT and README
INSTALL(FILES COPYRIGHT README DESTINATION share/doc/cmake/t2)

# install runhello.sh
INSTALL(PROGRAMS runhello.sh DESTINATION bin)

# install hello
INSTALL(PROGRAMS ./build/bin/hello DESTINATION bin)

#install hello.txt
INSTALL(DIRECTORY doc/ DESTINATION share/doc/cmake/t2)


#SET(SRC_LIST main.c)
#MESSAGE(STATUS "This is BINARY dir " ${HELLO_BINARY_DIR})
#MESSAGE(STATUS "This is SOURCE dir " ${HELLO_SOURCE_DIR})
#ADD_EXECUTABLE(hello ${SRC_LIST})
