
#t4/src CMakeLists.txt

INCLUDE_DIRECTORIES(/home/aut/study/tools/dev_tools/cmake/backup4/cmake/t3/lib/)
ADD_EXECUTABLE(main main.c)
TARGET_LINK_LIBRARIES(main /home/aut/tmp/t2/usr/lib/libhello.so)
#TARGET_LINK_LIBRARIES(main /home/aut/tmp/t2/usr/lib/libhello.a)

MESSAGE(STATUS "CMAKE_CURRENT_SOURCE_DIR: " ${CMAKE_CURRENT_SOURCE_DIR})
MESSAGE(STATUS "CMAKE_CURRENT_BINARY_DIR: " ${CMAKE_CURRENT_BINARY_DIR})
MESSAGE(STATUS "CMAKE_CURRENT_LIST_FILE: " ${CMAKE_CURRENT_LIST_FILE})
MESSAGE(STATUS "CMAKE_CURRENT_LIST_LINE: " ${CMAKE_CURRENT_LIST_LINE})

EXEC_PROGRAM(ls ARGS "../src" OUTPUT_VARIABLE LS_OUTPUT RETURN_VALUE LS_RVALUE)
IF(LS_OUTPUT)
    #MESSAGE(STATUS "NOT ls")
    #ELSE
    MESSAGE(STATUS "ls OUTPUT: " ${LS_OUTPUT})
ENDIF(LS_OUTPUT)
