
FIND_PACKAGE(HELLO)
IF (HELLO_FOUND)
    MESSAGE(STATUS "src/HELLO_FOUND")
    ADD_EXECUTABLE(hello main.c)
    INCLUDE_DIRECTORIES(${HELLO_INCLUDE_DIR})
    TARGET_LINK_LIBRARIES(hello ${HELLO_LIBRARY})
ENDIF (HELLO_FOUND)

AUX_SOURCE_DIRECTORY(. SRC_LIST)
AUX_SOURCE_DIRECTORY(ssrc SRC_LIST)

MESSAGE(STATUS "SRC_LIST: " ${SRC_LIST})
